# gvp

./: LICENSE  README.md  environment.yaml  pyproject.toml
data/: pdb.py
experiments/: README.md  initialize_dataset.py  pretrain_rcsd.py  submit_initialize.sh  submit_pretrain.sh
gvp/data/: biotite.py  pdb.py  pyg.py  rcsb_dataset.py  transforms.py  types.py
gvp/nn/: gvp.py  gvp_conv.py  layers.py  vector.py
gvp/test/: __init__.py  data.py
tests/: conftest.py  sample_tiny.parquet
tests/data/: test_biotite.py  test_dataset.py  test_pdb.py  test_residue.py  test_transforms.py  test_types.py
tests/models/: test_res_gvp.py
tests/nn/: test_gvp.py  test_layers.py  test_pool.py  test_vector.py
torch_gvp/: typing.py
torch_gvp/data/: biotite.py  rcsb_dataset.py  residue.py  transforms.py
torch_gvp/models/: res_gvp.py
torch_gvp/nn/: gvp.py  gvp_conv.py  layers.py  pool.py  vector.py
torch_gvp/test/: data.py
